# shortener-svc

./: Cargo.toml  README.md  test.rest
.github/workflows/: build.yml
config/: config.toml
schema/: shortener.sql
src/: config.rs  entity.rs  error.rs  handler.rs  lib.rs  main.rs
src/repo/: mod.rs  repo.rs
